--- a/scss/_download.scss
+++ b/scss/_download.scss
@@ -1,16 +1,12 @@
 .download {
-  margin-top: 45rem;
+  margin-top: 65rem;
+  padding-bottom: 14.5rem;
   &-container {
     display: grid;
     grid-template-columns: 2fr 1fr;
     position: relative;
   }
-  &-heading {
-    font-family: $secondFont;
-    text-transform: uppercase;
-    color: $darkColor;
-    font-size: 7.2rem;
-  }
+
   &-desc {
     margin-top: 6rem;
     font-size: 1.6rem;
