--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -2,3 +2,4 @@ $primaryFont: "Open Sans", sans-serif;
 $secondFont: "Bebas Neue", cursive;
 $darkColor: #25365d;
 $textColor: #5a5a5a;
+$backgroundColor: #f7f9fb;
